# embedded-vehicle-edge-node

./: CMakeLists.txt  README.md
include/: CanReceiver.hpp  DataFilter.hpp  ThreadSafeQueue.hpp
src/: main.cpp
tests/: test_filter.cpp
